add annotations for second manifest

--- a/using-internet-archive/S01/manifest.json
+++ b/using-internet-archive/S01/manifest.json
@@ -1,157 +1,163 @@
 {
-	"@context": "http://iiif.io/api/presentation/2/context.json",
-	"@id": "http://46a1b78f-e582-455e-b16f-84db5f764609",
-	"@type": "sc:Manifest",
-	"label": "Huan Junbi Sketchbook, gifted to Tien-Wei Chang",
-	"metadata": [],
-	"description": [
-		{
-			"@value": "A sketchbook, originally belonging to Huang Junbi and gifted by him to Tien-Wei Chang. Contains sketches by Huang Junbi from his time traveling in China during [years here], as well as news clippings added in by Tien-Wei Chang.",
-			"@language": "en"
-		}
-	],
-	"license": "https://creativecommons.org/licenses/by/3.0/",
-	"attribution": "Hao Chang, Edward Zawacki, Selina Chang-Yi Zawacki",
-	"sequences": [
-		{
-			"@id": "http://29490ef7-8cdf-4fdc-85cd-9267c7cbbf42",
-			"@type": "sc:Sequence",
-			"label": [
-				{
-					"@value": "Normal Sequence",
-					"@language": "en"
-				}
-			],
-			"canvases": [
-				{
-					"@id": "http://226d4f11-28c5-4bb4-a0b1-a14ae7a5e9ed",
-					"@type": "sc:Canvas",
-					"label": "Page 1",
-					"height": 1131,
-					"width": 1565,
-					"images": [
-						{
-							"@context": "http://iiif.io/api/presentation/2/context.json",
-							"@id": "http://c2c34a0e-81d7-4638-9134-b3d580ec15c8",
-							"@type": "oa:Annotation",
-							"motivation": "sc:painting",
-							"resource": {
-								"@id": "https://iiif.archivelab.org/iiif/s01-n01/full/full/0/default.jpg",
-								"@type": "dctypes:Image",
-								"format": "image/jpeg",
-								"service": {
-									"@context": "http://iiif.io/api/image/2/context.json",
-									"@id": "https://iiif.archivelab.org/iiif/s01-n01",
-									"profile": [
-										"http://iiif.io/api/image/2/level2.json"
-									]
-								},
-								"height": 1131,
-								"width": 1565
-							},
-							"on": "http://226d4f11-28c5-4bb4-a0b1-a14ae7a5e9ed"
-						}
-					],
-					"related": ""
-				},
-				{
-					"@id": "http://1b095d76-54d5-425f-9cf3-9803d759a1f4",
-					"@type": "sc:Canvas",
-					"label": "Page 2",
-					"height": 1131,
-					"width": 1145,
-					"images": [
-						{
-							"@context": "http://iiif.io/api/presentation/2/context.json",
-							"@id": "http://42d523ad-12c1-4b6e-9c3d-c58231636b8e",
-							"@type": "oa:Annotation",
-							"motivation": "sc:painting",
-							"resource": {
-								"@id": "https://iiif.archivelab.org/iiif/s01-n02/full/full/0/default.jpg",
-								"@type": "dctypes:Image",
-								"format": "image/jpeg",
-								"service": {
-									"@context": "http://iiif.io/api/image/2/context.json",
-									"@id": "https://iiif.archivelab.org/iiif/s01-n02",
-									"profile": [
-										"http://iiif.io/api/image/2/level2.json"
-									]
-								},
-								"height": 1131,
-								"width": 1145
-							},
-							"on": "http://1b095d76-54d5-425f-9cf3-9803d759a1f4"
-						}
-					],
-					"related": ""
-				},
-				{
-					"@id": "http://efc067fd-3ef5-478c-a064-fa12e0f726a0",
-					"@type": "sc:Canvas",
-					"label": "Page 3",
-					"height": 1435,
-					"width": 2293,
-					"images": [
-						{
-							"@context": "http://iiif.io/api/presentation/2/context.json",
-							"@id": "http://7dc8ecc4-5323-4a5a-adef-ecdea525b465",
-							"@type": "oa:Annotation",
-							"motivation": "sc:painting",
-							"resource": {
-								"@id": "https://iiif.archivelab.org/iiif/s01-n03/full/full/0/default.jpg",
-								"@type": "dctypes:Image",
-								"format": "image/jpeg",
-								"service": {
-									"@context": "http://iiif.io/api/image/2/context.json",
-									"@id": "https://iiif.archivelab.org/iiif/s01-n03",
-									"profile": [
-										"http://iiif.io/api/image/2/level2.json"
-									]
-								},
-								"height": 1435,
-								"width": 2293
-							},
-							"on": "http://efc067fd-3ef5-478c-a064-fa12e0f726a0"
-						}
-					],
-					"related": ""
-				},
-				{
-					"@id": "http://c76a916b-3810-43f9-b474-49229f16aeaf",
-					"@type": "sc:Canvas",
-					"label": "Page 4",
-					"height": 1653,
-					"width": 1440,
-					"images": [
-						{
-							"@context": "http://iiif.io/api/presentation/2/context.json",
-							"@id": "http://cf58559e-723e-42f2-8683-a7034c0264f3",
-							"@type": "oa:Annotation",
-							"motivation": "sc:painting",
-							"resource": {
-								"@id": "https://iiif.archivelab.org/iiif/s01-n04/full/full/0/default.jpg",
-								"@type": "dctypes:Image",
-								"format": "image/jpeg",
-								"service": {
-									"@context": "http://iiif.io/api/image/2/context.json",
-									"@id": "https://iiif.archivelab.org/iiif/s01-n04",
-									"profile": [
-										"http://iiif.io/api/image/2/level2.json"
-									]
-								},
-								"height": 1653,
-								"width": 1440
-							},
-							"on": "http://c76a916b-3810-43f9-b474-49229f16aeaf"
-						}
-					],
-					"related": ""
-				}
-			]
-		}
-	],
-	"structures": [],
-	"thumbnail": {
-		"@id": "http://efc067fd-3ef5-478c-a064-fa12e0f726a0"
-	}
+  "@context": "http://iiif.io/api/presentation/2/context.json",
+  "@id": "http://46a1b78f-e582-455e-b16f-84db5f764609",
+  "@type": "sc:Manifest",
+  "label": "Huan Junbi Sketchbook, gifted to Tien-Wei Chang",
+  "metadata": [],
+  "description": [
+    {
+      "@value": "A sketchbook, originally belonging to Huang Junbi and gifted by him to Tien-Wei Chang. Contains sketches by Huang Junbi from his time traveling in China during [years here], as well as news clippings added in by Tien-Wei Chang.",
+      "@language": "en"
+    }
+  ],
+  "license": "https://creativecommons.org/licenses/by/3.0/",
+  "attribution": "Hao Chang, Edward Zawacki, Selina Chang-Yi Zawacki",
+  "sequences": [
+    {
+      "@id": "http://29490ef7-8cdf-4fdc-85cd-9267c7cbbf42",
+      "@type": "sc:Sequence",
+      "label": [
+        {
+          "@value": "Normal Sequence",
+          "@language": "en"
+        }
+      ],
+      "canvases": [
+        {
+          "@id": "http://226d4f11-28c5-4bb4-a0b1-a14ae7a5e9ed",
+          "@type": "sc:Canvas",
+          "label": "Page 1",
+          "height": 1131,
+          "width": 1565,
+          "images": [
+            {
+              "@context": "http://iiif.io/api/presentation/2/context.json",
+              "@id": "http://c2c34a0e-81d7-4638-9134-b3d580ec15c8",
+              "@type": "oa:Annotation",
+              "motivation": "sc:painting",
+              "resource": {
+                "@id": "https://iiif.archivelab.org/iiif/s01-n01/full/full/0/default.jpg",
+                "@type": "dctypes:Image",
+                "format": "image/jpeg",
+                "service": {
+                  "@context": "http://iiif.io/api/image/2/context.json",
+                  "@id": "https://iiif.archivelab.org/iiif/s01-n01",
+                  "profile": ["http://iiif.io/api/image/2/level2.json"]
+                },
+                "height": 1131,
+                "width": 1565
+              },
+              "on": "http://226d4f11-28c5-4bb4-a0b1-a14ae7a5e9ed"
+            }
+          ],
+          "otherContent": [
+            {
+              "@id": "https://szmoon.github.io/using-internet-archive/S01/N01-annotations.json",
+              "@type": "sc:AnnotationList",
+              "label": "Calligraphy and Signature information"
+            }
+          ],
+          "related": ""
+        },
+        {
+          "@id": "http://1b095d76-54d5-425f-9cf3-9803d759a1f4",
+          "@type": "sc:Canvas",
+          "label": "Page 2",
+          "height": 1131,
+          "width": 1145,
+          "images": [
+            {
+              "@context": "http://iiif.io/api/presentation/2/context.json",
+              "@id": "http://42d523ad-12c1-4b6e-9c3d-c58231636b8e",
+              "@type": "oa:Annotation",
+              "motivation": "sc:painting",
+              "resource": {
+                "@id": "https://iiif.archivelab.org/iiif/s01-n02/full/full/0/default.jpg",
+                "@type": "dctypes:Image",
+                "format": "image/jpeg",
+                "service": {
+                  "@context": "http://iiif.io/api/image/2/context.json",
+                  "@id": "https://iiif.archivelab.org/iiif/s01-n02",
+                  "profile": ["http://iiif.io/api/image/2/level2.json"]
+                },
+                "height": 1131,
+                "width": 1145
+              },
+              "on": "http://1b095d76-54d5-425f-9cf3-9803d759a1f4"
+            }
+          ],
+          "related": ""
+        },
+        {
+          "@id": "http://efc067fd-3ef5-478c-a064-fa12e0f726a0",
+          "@type": "sc:Canvas",
+          "label": "Page 3",
+          "height": 1435,
+          "width": 2293,
+          "images": [
+            {
+              "@context": "http://iiif.io/api/presentation/2/context.json",
+              "@id": "http://7dc8ecc4-5323-4a5a-adef-ecdea525b465",
+              "@type": "oa:Annotation",
+              "motivation": "sc:painting",
+              "resource": {
+                "@id": "https://iiif.archivelab.org/iiif/s01-n03/full/full/0/default.jpg",
+                "@type": "dctypes:Image",
+                "format": "image/jpeg",
+                "service": {
+                  "@context": "http://iiif.io/api/image/2/context.json",
+                  "@id": "https://iiif.archivelab.org/iiif/s01-n03",
+                  "profile": ["http://iiif.io/api/image/2/level2.json"]
+                },
+                "height": 1435,
+                "width": 2293
+              },
+              "on": "http://efc067fd-3ef5-478c-a064-fa12e0f726a0"
+            }
+          ],
+          "related": ""
+        },
+        {
+          "@id": "http://c76a916b-3810-43f9-b474-49229f16aeaf",
+          "@type": "sc:Canvas",
+          "label": "Page 4",
+          "height": 1653,
+          "width": 1440,
+          "images": [
+            {
+              "@context": "http://iiif.io/api/presentation/2/context.json",
+              "@id": "http://cf58559e-723e-42f2-8683-a7034c0264f3",
+              "@type": "oa:Annotation",
+              "motivation": "sc:painting",
+              "resource": {
+                "@id": "https://iiif.archivelab.org/iiif/s01-n04/full/full/0/default.jpg",
+                "@type": "dctypes:Image",
+                "format": "image/jpeg",
+                "service": {
+                  "@context": "http://iiif.io/api/image/2/context.json",
+                  "@id": "https://iiif.archivelab.org/iiif/s01-n04",
+                  "profile": ["http://iiif.io/api/image/2/level2.json"]
+                },
+                "height": 1653,
+                "width": 1440
+              },
+              "on": "http://c76a916b-3810-43f9-b474-49229f16aeaf"
+            }
+          ],
+          "otherContent": [
+            {
+              "@id": "https://szmoon.github.io/using-internet-archive/S01/N04-annotations.json",
+              "@type": "sc:AnnotationList",
+              "label": "Calligraphy and Signature information"
+            }
+          ],
+          "related": ""
+        }
+      ]
+    }
+  ],
+  "structures": [],
+  "thumbnail": {
+    "@id": "http://efc067fd-3ef5-478c-a064-fa12e0f726a0"
+  }
 }
