--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "leaflet": "1.0.0",
+    "leaflet-iiif": "^3.0.0",
     "openseadragon": "2.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12"
