--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "leaflet": "1.0.0",
+    "jquery": "^3.6.0",
+    "leaflet": "1.0.3",
     "leaflet-iiif": "^3.0.0",
-    "openseadragon": "2.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12"
   },
