--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "leaflet": "1.0.3",
     "leaflet-iiif": "^3.0.0",
     "vue": "^3.0.0",
+    "vue-plugin-load-script": "^2.1.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
